--- a/src/content/docs/dns/manage-dns-records/how-to/create-zone-apex.mdx
+++ b/src/content/docs/dns/manage-dns-records/how-to/create-zone-apex.mdx
@@ -17,7 +17,7 @@ To do this, create a corresponding [`A`, `AAAA`, or `CNAME` record](/dns/manage-
 | Type | Name | IPv4 address | Proxy status |
 | ---- | ---- | ------------ | ------------ |
 | A    | `@`  | `192.0.2.1`  | Proxied      |
-
+A|@troy|`192.0.2.1`
 </Example>
 
 ## Domain redirects
